# FlashSim-Low-Latency-Order-Book-HFT-Strategy-Simulator

./: Makefile  README.md  pyproject.toml  run.py  run_all.sh
data/: sample.parquet  sample_vol_0.002.parquet  sample_vol_0.05.parquet
src/backtest/: backtester.py
src/core/: __init__.py  lob.py  order.py
src/dash/: app.py
src/io/: __init__.py  generator.py  replay.py
src/strategy/: __init__.py  imbalance.py
tests/: test_core.py
